Modified to work with templates

--- a/templates/_banner.html
+++ b/templates/_banner.html
@@ -7,7 +7,7 @@
     <div class="container">
       <div class="header_top">
          <div class="header_top_left">
-          <div class="box_11"><a href="checkout.html">
+          <div class="box_11"><a href="checkout">
         <h4><p>Cart: <span class="simpleCart_total"></span> (<span id="simpleCart_quantity" class="simpleCart_quantity"></span> items)</p><img src="images/bag.png" alt=""/><div class="clearfix"> </div></h4>
         </a></div>
           <p class="empty"><a href="javascript:;" class="simpleCart_empty">Empty Cart</a></p>
@@ -22,7 +22,7 @@
       </select>
      </div>
      <ul class="header_user_info">
-      <a class="login" href="login.html">
+      <a class="login" href="login">
       <i class="user"> </i>
       <li class="user_desc">My Account</li>
       </a>
@@ -51,7 +51,7 @@
   </div>
   <div class="header_bottom">
    <div class="logo">
-    <h1><a href="index.html"><span class="m_1">W</span>atches</a></h1>
+    <h1><a href="index"><span class="m_1">W</span>atches</a></h1>
    </div>
      <div class="menu">
      <ul class="megamenu skyblue">
@@ -62,16 +62,16 @@
             <div class="h_nav">
               <h4>Men</h4>
               <ul>
-                <li><a href="men.html">Watches</a></li>
-                <li><a href="men.html">watches</a></li>
-                <li><a href="men.html">Blazers</a></li>
-                <li><a href="men.html">Suits</a></li>
-                <li><a href="men.html">Trousers</a></li>
-                <li><a href="men.html">Jeans</a></li>
-                <li><a href="men.html">Shirts</a></li>
-                <li><a href="men.html">Sweatshirts & Hoodies</a></li>
-                <li><a href="men.html">Swim Wear</a></li>
-                <li><a href="men.html">Accessories</a></li>
+                <li><a href="men">Watches</a></li>
+                <li><a href="men">watches</a></li>
+                <li><a href="men">Blazers</a></li>
+                <li><a href="men">Suits</a></li>
+                <li><a href="men">Trousers</a></li>
+                <li><a href="men">Jeans</a></li>
+                <li><a href="men">Shirts</a></li>
+                <li><a href="men">Sweatshirts & Hoodies</a></li>
+                <li><a href="men">Swim Wear</a></li>
+                <li><a href="men">Accessories</a></li>
               </ul>
             </div>
           </div>
@@ -79,16 +79,16 @@
             <div class="h_nav">
               <h4>Women</h4>
               <ul>
-                <li><a href="men.html">Watches</a></li>
-                <li><a href="men.html">Outerwear</a></li>
-                <li><a href="men.html">Dresses</a></li>
-                <li><a href="men.html">Handbags</a></li>
-                <li><a href="men.html">Trousers</a></li>
-                <li><a href="men.html">Jeans</a></li>
-                <li><a href="men.html">T-Shirts</a></li>
-                <li><a href="men.html">Shoes</a></li>
-                <li><a href="men.html">Coats</a></li>
-                <li><a href="men.html">Accessories</a></li>
+                <li><a href="men">Watches</a></li>
+                <li><a href="men">Outerwear</a></li>
+                <li><a href="men">Dresses</a></li>
+                <li><a href="men">Handbags</a></li>
+                <li><a href="men">Trousers</a></li>
+                <li><a href="men">Jeans</a></li>
+                <li><a href="men">T-Shirts</a></li>
+                <li><a href="men">Shoes</a></li>
+                <li><a href="men">Coats</a></li>
+                <li><a href="men">Accessories</a></li>
               </ul>
             </div>
           </div>
@@ -142,16 +142,16 @@
             <div class="h_nav">
               <h4>Men</h4>
               <ul>
-                <li><a href="men.html">Watches</a></li>
-                <li><a href="men.html">watches</a></li>
-                <li><a href="men.html">Blazers</a></li>
-                <li><a href="men.html">Suits</a></li>
-                <li><a href="men.html">Trousers</a></li>
-                <li><a href="men.html">Jeans</a></li>
-                <li><a href="men.html">Shirts</a></li>
-                <li><a href="men.html">Sweatshirts & Hoodies</a></li>
-                <li><a href="men.html">Swim Wear</a></li>
-                <li><a href="men.html">Accessories</a></li>
+                <li><a href="men">Watches</a></li>
+                <li><a href="men">watches</a></li>
+                <li><a href="men">Blazers</a></li>
+                <li><a href="men">Suits</a></li>
+                <li><a href="men">Trousers</a></li>
+                <li><a href="men">Jeans</a></li>
+                <li><a href="men">Shirts</a></li>
+                <li><a href="men">Sweatshirts & Hoodies</a></li>
+                <li><a href="men">Swim Wear</a></li>
+                <li><a href="men">Accessories</a></li>
               </ul>
             </div>
           </div>
@@ -159,16 +159,16 @@
             <div class="h_nav">
               <h4>Women</h4>
               <ul>
-                <li><a href="men.html">Watches</a></li>
-                <li><a href="men.html">Outerwear</a></li>
-                <li><a href="men.html">Dresses</a></li>
-                <li><a href="men.html">Handbags</a></li>
-                <li><a href="men.html">Trousers</a></li>
-                <li><a href="men.html">Jeans</a></li>
-                <li><a href="men.html">T-Shirts</a></li>
-                <li><a href="men.html">Shoes</a></li>
-                <li><a href="men.html">Coats</a></li>
-                <li><a href="men.html">Accessories</a></li>
+                <li><a href="men">Watches</a></li>
+                <li><a href="men">Outerwear</a></li>
+                <li><a href="men">Dresses</a></li>
+                <li><a href="men">Handbags</a></li>
+                <li><a href="men">Trousers</a></li>
+                <li><a href="men">Jeans</a></li>
+                <li><a href="men">T-Shirts</a></li>
+                <li><a href="men">Shoes</a></li>
+                <li><a href="men">Coats</a></li>
+                <li><a href="men">Accessories</a></li>
               </ul>
             </div>
           </div>
@@ -215,9 +215,9 @@
           </div>
         </div>
       </li>
-      <li><a class="{{if eq .Active "Brands"}}active{{end}} color10" href="brands.html">Brands</a></li>
-      <li class="active grid"><a class="color3" href="index.html">Sale</a></li>
-      <li><a class="color7" href="404.html">News</a></li>
+      <li><a class="{{if eq .Active "Brands"}}active{{end}} color10" href="brands">Brands</a></li>
+      <li class="active grid"><a class="color3" href="index">Sale</a></li>
+      <li><a class="color7" href="404">News</a></li>
       <div class="clearfix"> </div>
     </ul>
     </div>
