Included registration form

--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@
 	{{template "_banner.html" .}}
     <div class="account-in">
    	  <div class="container">
-   	     <form>
+   	     <form action="/register" method="post">
 		   <div class="register-top-grid">
 			<h2>PERSONAL INFORMATION</h2>
 			 <div>
